--- a/june-chat-client/src/main/resources/chat.fxml
+++ b/june-chat-client/src/main/resources/chat.fxml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!--<?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
@@ -19,4 +19,4 @@
         <TextField promptText="Введите сообщение" fx:id="messageField" HBox.hgrow="ALWAYS" onAction="#sendMessage"/>
         <Button onAction="#sendMessage">Отправить</Button>
     </HBox>
-</VBox>
+</VBox>-->
